--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+  	<title>Andrew Kisel</title>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-
+  <h1>Hello, Code School!</h1>
+  <ul>
+  	<li>Admin</li>
+  	<li>Linux</li>
+  </ul>
   </body>
 </html>
